# TradingAgents-AShare

./: .gitignore  pyproject.toml  requirements.txt
api/: database.py  main.py
api/services/: settings_service.py
frontend/: vite.config.ts
frontend/src/components/: DebateDrawer.tsx  DebateTimeline.tsx
frontend/src/components/settings/: DataSourceStatusCard.tsx  TestResultCard.tsx  TushareSettingsCard.tsx
frontend/src/pages/: Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts  settings.ts
tests/integration/: test_tushare_integration.py
tests/unit/: test_data_source_manager.py
tradingagents/dataflows/: config_store.py  exceptions.py  manager.py  metrics_store.py  models.py
tradingagents/dataflows/adapters/: akshare.py  base.py  tushare.py
